# Mafia-app

./: CMakeLists.txt  main.c
inc/person/: age.h  job.h  sex.h
src/: person.c
src/person/: age.c  job.c  sex.c
